[package]
name = "azd_from_kv"
version = "0.1.0"
edition = "2021"
default-run = "connect_plc"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0"
envy = "0.4.2"
tokio = { version = "1.21.0", features = ["full"] }

# bin
dotenv = "0.15.0"
mylogger = { git = "https://github.com/ryo2357/rs-mylogger" }
